test/extended/testdata/cmd/test/cmd/testdata/idling-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  generateName: idling-echo-
spec:
  replicas: 2
  selector:
    app: idling-echo
    deploymentconfig: idling-echo
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: idling-echo
        deploymentconfig: idling-echo
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        name: idling-tcp-echo
        command:
          - /usr/bin/socat
          - TCP4-LISTEN:8675,reuseaddr,fork
          - EXEC:'/bin/cat'
        ports:
        - containerPort: 8675
          protocol: TCP
      - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        name: idling-udp-echo
        command:
          - /usr/bin/socat
          - UDP4-LISTEN:3090,reuseaddr,fork
          - EXEC:'/bin/cat'
        ports:
        - containerPort: 3090
          protocol: UDP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
