test/extended/testdata/cmd/test/cmd/testdata/idling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generateName: idling-echo-
  labels:
    app: idling-echo
    deployment: idling-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: idling-echo
      deployment: idling-echo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: idling-echo
        deployment: idling-echo
    spec:
      containers:
      - image: registry.k8s.io/e2e-test-images/agnhost:2.63.0
        name: idling-echo-server
        args: [ "netexec", "--http-port", "8675", "--udp-port", "3090" ]
        ports:
        - containerPort: 8675
          protocol: TCP
        - containerPort: 3090
          protocol: UDP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
