test/extended/testdata/cmd/test/cmd/testdata/multiport-service-ipv6.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: 2015-10-13T10:13:11Z
    labels:
      test: missing-route-port
    name: frontend
    resourceVersion: "259"
    uid: 024d82eb-7193-11e5-b84d-080027c5bfa9
  spec:
    clusterIP: fd02::face
    ports:
    - name: web
      port: 5432
      protocol: TCP
      targetPort: 8080
    - name: web2
      port: 5433
      protocol: TCP
      targetPort: 8080
    selector:
      name: frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
