test/extended/testdata/cmd/test/cmd/testdata/rollingupdate-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: bind
spec:
  selector:
    matchLabels:
      service: bind
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        service: bind
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: "service"
                  operator: "In"
                  values: ["bind"]
              topologyKey: "kubernetes.io/hostname"
              namespaces: []
      containers:
      - name: kubernetes-pause
        image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        command: ["/bin/sleep", "84600"]
