test/extended/testdata/cmd/test/cmd/testdata/services.yaml
kind: List
apiVersion: v1
items:
- kind: Service
  apiVersion: v1
  metadata:
    name: clusterip
  spec:
    ports:
    - name: http
      protocol: TCP
      port: 80
- kind: Endpoints
  apiVersion: v1
  metadata:
    name: clusterip
    annotations:
      "endpoints.beta.kubernetes.io/hostnames-map": '{"10.1.2.4":{"HostName": "test2"}}'
  subsets:
  - addresses:
    - ip: 10.1.2.3
    - ip: 10.1.2.4
    ports:
    - name: http
      protocol: TCP
      port: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: headless
  spec:
    clusterIP: None
    ports:
    - name: http
      protocol: TCP
      port: 80
- kind: Endpoints
  apiVersion: v1
  metadata:
    name: headless
  subsets:
  - addresses:
    - ip: 10.1.2.3
    - ip: 10.1.2.4
      hostname: test2
    ports:
    - name: http
      protocol: TCP
      port: 80
