test/extended/testdata/cmd/test/cmd/testdata/simple-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: simple-deployment
spec:
  replicas: 1
  selector:
    name: simple-deployment
  strategy:
    type: Rolling
    rollingParams:
  template:
    metadata:
      labels:
        name: simple-deployment
    spec:
      containers:
      - image: "docker.io/openshift/deployment-example:v1"
        imagePullPolicy: IfNotPresent
        name: myapp
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
  triggers:
  - type: ConfigChange
