test/extended/testdata/cmd/test/cmd/testdata/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: testapp
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: centos/ruby-26-centos7:latest
        command:
        - /bin/sleep
        args:
        - infinity
