test/extended/testdata/cmd/test/cmd/testdata/test-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: test-deployment-config
spec:
  replicas: 1
  selector:
    name: test-deployment
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 20
      post:
        failurePolicy: Ignore
        tagImages:
        - containerName: ruby-helloworld
          to:
            kind: ImageStreamTag
            name: origin-ruby-sample:deployed
  template:
    metadata:
      labels:
        name: test-deployment
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        imagePullPolicy: IfNotPresent
        name: ruby-helloworld
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: vol1
  triggers:
  - type: ConfigChange
