test/extended/testdata/cmd/test/cmd/testdata/test-route.json
{
  "kind": "Route",
  "apiVersion": "route.openshift.io/v1",
  "metadata": {
    "name": "testroute",
    "creationTimestamp": null,
    "labels": {
       "rtlabel1": "greatroute"
    }
  },
  "spec": {
    "host": "test.example.com",
    "to": {
      "kind": "Service",
      "name": "testservice"
    }
  },
  "status": {}
}
